--- a/package.json
+++ b/package.json
@@ -107,6 +107,8 @@
     "postcss-selector-not": "^2.0.0",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "15.3.1",
+    "react-simple-maps": "^0.12.0",
+    "react-tooltip": "^3.5.0",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.3.0",
