--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "pretty-error": "2.0.0",
     "react": "15.3.1",
     "react-bootstrap": "^0.30.3",
+    "react-bootstrap-table": "^4.3.1",
     "react-chartjs": "^0.8.0",
     "react-datatable": "0.0.31",
     "react-dom": "15.3.1",
